fix item height in navigation (esp. with line breaks in the navigation)

--- a/static/scss/index.scss
+++ b/static/scss/index.scss
@@ -175,7 +175,8 @@ main nav {
   }
 
   ul li {
-    line-height: $nav-item-height;
+    line-height: $font-size;
+    padding: $nav-item-height/2-$font-size/2 0;
 
     &.active a {
       font-weight: bold;
